--- a/package.json
+++ b/package.json
@@ -6,8 +6,14 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@vitejs/plugin-vue": "^5.1.4",
         "axios": "^1.7.4",
         "laravel-vite-plugin": "^1.0",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "vue": "^3.5.10",
+        "vue-loader": "^17.4.2",
+        "vue-router": "^4.4.5"
     }
 }
